dataset1235/2025-2/610742602/users/3173303223/executions/677928262_1927446959.log
== RUN (2025-08-26 21:21:07)
-- CODE: 
var = float(input("Digite um numero:"))
Q1 = var * (27 / 100)
Q2 = var + (n * (42 / 100))
Q3 = var - (n * (63 / 100)) 
print(round(Q1,2))
print(round(Q2,2))
print(round(Q3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q2 = var + (n * (42 / 100))
                ^
NameError: name 'n' is not defined
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q2 = var + (n * (42 / 100))
                ^
NameError: name 'n' is not defined
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q2 = var + (n * (42 / 100))
                ^
NameError: name 'n' is not defined
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q2 = var + (n * (42 / 100))
                ^
NameError: name 'n' is not defined
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q2 = var + (n * (42 / 100))
                ^
NameError: name 'n' is not defined
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Q2 = var + (n * (42 / 100))
                ^
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:21:34)
-- CODE: 
var = float(input("Digite um numero:"))
Q1 = var * (27 / 100)
Q2 = var + (var * (42 / 100))
Q3 = var - (var * (63 / 100)) 
print(round(Q1,2))
print(round(Q2,2))
print(round(Q3,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:18:14)
-- CODE: 
var = float("input(Digite um numero:"))
Q1 = n * (27 / 100)
Q2 = n + (n * (42 / 100))
Q3 = n - (n * (63 / 100))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:18:22)
-- CODE: 
var = float("input(Digite um numero:"))
Q1 = n * (27 / 100)
Q2 = n + (n * (42 / 100))
Q3 = n - (n * (63 / 100))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:19:53)
-- CODE: 
var = float("input(Digite um numero:"))
Q1 = n * (27 / 100)
Q2 = n + (n * (42 / 100))
Q3 = n - (n * (63 / 100)) 
print(round(Q1,2))
print(round(Q2,2))
print(round(Q3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    var = float("input(Digite um numero:"))
                                          ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
